SERVER-60386 [SBE] Use classic engine for clustered collections